--- a/index.html
+++ b/index.html
@@ -21,14 +21,73 @@
         }),
       })
 
+      const MARGIN = 2 // m
+
       Cesium.Ion.defaultAccessToken =
         'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiIzZTI5NTZhYi1jOTI5LTQ0Y2EtODE4Ni1kMTY5N2I0NWUxOTIiLCJpZCI6MTk3MTMyLCJpYXQiOjE3MDg1ODY3MjV9.7dwPoXuM4xUPC8ezK5OxkDy7aBVSITQUIJD0Cp6ZukI'
 
       // Define the original polygon coordinates
+      const polygonPoints = [
+        turf.point([115.87730300372058, -31.99815649565551]),
+        turf.point([115.8776101166282, -31.998155358311532]),
+        turf.point([115.87729830985518, -31.998288996132025]),
+      ]
       const polygonCoords = Cesium.Cartesian3.fromDegreesArray([
         115.87730300372058, -31.99815649565551, 115.8776101166282, -31.998155358311532, 115.87729830985518,
         -31.998288996132025,
       ])
+
+      let length = polygonPoints.length
+      const parallelLines = polygonPoints.reduce((acc, cur, index) => {
+        const nextIndex = (index + 1) % length
+        const pointA = cur
+        const pointB = polygonPoints[nextIndex]
+
+        const edge = turf.lineString([
+          [pointA.geometry.coordinates[0], pointA.geometry.coordinates[1]],
+          [pointB.geometry.coordinates[0], pointB.geometry.coordinates[1]],
+        ])
+        const offsetEdge = turf.lineOffset(edge, -MARGIN, { units: 'meters' })
+
+        const startCoord = offsetEdge.geometry.coordinates[0] // Start point coordinates
+        const endCoord = offsetEdge.geometry.coordinates[offsetEdge.geometry.coordinates.length - 1] // End point coordinates
+
+        // Create Turf.js points from the coordinates
+        let pointC = turf.point(startCoord)
+        let pointD = turf.point(endCoord)
+
+        // Calculate the bearing from A to B
+        const bearingCD = turf.bearing(pointC, pointD)
+
+        // Calculate point C, 10 meters extended from A in the opposite direction
+        pointC = turf.destination(pointC, MARGIN * 20, bearingCD - 180, { units: 'meters' })
+
+        // Calculate point D, 10 meters extended from B in the same direction
+        pointD = turf.destination(pointD, MARGIN * 20, bearingCD, { units: 'meters' })
+
+        const line = turf.lineString([
+          [pointC.geometry.coordinates[0], pointC.geometry.coordinates[1]],
+          [pointD.geometry.coordinates[0], pointD.geometry.coordinates[1]],
+        ])
+
+        acc.push(line)
+
+        return acc
+      }, [])
+
+      length = parallelLines.length
+      const marginPoints = parallelLines.reduce((acc, line, index) => {
+        const nextIndex = (index + 1) % length
+        const nextLine = parallelLines[nextIndex]
+        if (nextLine) {
+          const intersects = turf.lineIntersect(line, nextLine)
+          const intersectionPoints = intersects.features.map((feature) => {
+            return feature
+          })
+          acc.push(...intersectionPoints)
+        }
+        return acc
+      }, [])
 
       // Add the original polygon to the map
       const mainPolygon = cesiumViewer.entities.add({
@@ -38,67 +97,16 @@
         },
       })
 
-      // Assumed that we have the intersection points below:
-      const points = [
-        turf.point([115.8773740822538, -31.99815706432749]),
-        turf.point([115.87730233316839, -31.99819630268574]),
-        turf.point([115.87730099206398, -31.998250895156243]),
-        turf.point([115.8774994755152, -31.998155358311532]),
-      ]
-
-      const margin = 10
-      const marginPoints = points.reduce((acc, cur, index) => {
-        const nextIndex = index + 1
-
-        if (index % 2 === 0 && points[nextIndex]) {
-          const pointA = cur
-          const pointB = points[nextIndex]
-
-          // Calculate the bearing from A to B
-          const bearingAB = turf.bearing(pointA, pointB)
-
-          // Calculate point C, 10 meters extended from A in the opposite direction
-          const pointC = turf.destination(pointA, 10, bearingAB - 180, { units: 'meters' })
-
-          // Calculate point D, 10 meters extended from B in the same direction
-          const pointD = turf.destination(pointB, 10, bearingAB, { units: 'meters' })
-
-          acc.push(pointC)
-          acc.push(pointD)
-        }
-
-        return acc
-      }, [])
-
-      const marginPointsInCoordinates = marginPoints
+      const marginPolygonPoints = marginPoints
         .map((point) => {
           return point.geometry.coordinates
         })
         .flat()
-
-      const polylinePositions = Cesium.Cartesian3.fromDegreesArray(marginPointsInCoordinates)
-
-      // Draw the margin polyline
-      cesiumViewer.entities.add({
-        polyline: {
-          clampToGround: true,
-          positions: polylinePositions,
-          // arcType: Cesium.ArcType.NONE,
-          width: 2,
-          material: new Cesium.PolylineOutlineMaterialProperty({
-            color: Cesium.Color.YELLOW,
-          }),
-          depthFailMaterial: new Cesium.PolylineOutlineMaterialProperty({
-            color: Cesium.Color.YELLOW,
-          }),
-        },
-      })
-
-      // Draw the margin polygon
-      cesiumViewer.entities.add({
+      const marginPolygonPointsInCartesian = Cesium.Cartesian3.fromDegreesArray(marginPolygonPoints)
+      const marginPolygon = cesiumViewer.entities.add({
         polygon: {
-          hierarchy: [...polylinePositions, polylinePositions[0]],
-          material: Cesium.Color.GREEN.withAlpha(0.5), // Semi-transparent blue
+          hierarchy: Cesium.Cartesian3.fromDegreesArray(marginPolygonPoints),
+          material: Cesium.Color.RED.withAlpha(0.5), // Semi-transparent red
         },
       })
 
